# chatbot

./: backend.py  frontend.py  llm.py  pyproject.toml  requirements.txt
config/: backend.yaml  ingest_config.py
data/: 1_1_2_information_humans_and_machines.txt  ai_and_procurement.txt  ai_automation_and_retailer_regret_in_supply_chains.txt  ai_in_business_research.txt  algorithmic_transparency_with_strategic_users.txt  artificial_intelligence_and_multimodal_data_in_the_service_of_human_decision‐making_a_case_study_in_debate_tutoring.txt  artificial_intelligence_and_the_changing_sources_of_competitive_advantage.txt  artificial_intelligence_coaches_for_sales_agents_caveats_and_solutions.txt  artificial_intelligence_in_healthcare_review_and_prediction_case_studies.txt  bots_with_feelings_should_ai_agents_express_positive_emotion_in_customer_service.txt  cognitive_challenges_in_human–artificial_intelligence_collaboration_investigating_the_path_toward_productive_delegation.txt  combining_human_and_artificial_intelligence_hybrid_problem-solving_in_organizations.txt  customer_choice_models_vs_machine_learning_finding_optimal_product_displays_on_alibaba.txt  data.txt  eliciting_human_judgment_for_prediction_algorithms.txt  expl(ai)ned_the_impact_of_explainable_artificial_intelligence_on_users’_information_processing.txt  exploring_the_role_of_artificial_intelligence_in_enhancing_academic_performance_a_case_study_of_chatgpt.txt  friend_or_foe_teaming_between_artificial_intelligence_and_workers_with_variation_in_experience.txt  task_1.txt  task_1_1.txt  (+15 more)
(+1 files in other folders)
