[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "chatbot POC"
authors = ["Felix Dietrich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.15"
langgraph = ">0.2.27"
langchain-openai = "^0.2.5"
openai = "^1.53.0"
langchain = "^0.3.7"
beautifulsoup4 = "^4.12.3"
langchain-community = "^0.3.5"
langchain-chroma = "^0.1.4"
streamlit = "^1.39.0"
pyyaml = "^6.0.2"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
